@@ -34,7 +34,7 @@ import lombok.RequiredArgsConstructor;
 import org.hisp.dhis.common.IdentifiableObject;
 import org.hisp.dhis.trackedentity.TrackedEntity;
 import org.hisp.dhis.trackedentity.TrackedEntityAttributeService;
-import org.hisp.dhis.user.CurrentUserService;
+import org.hisp.dhis.user.CurrentUserUtil;
 import org.springframework.stereotype.Service;
 
 /**
@@ -47,8 +47,6 @@ public class DefaultTrackedEntityAttributeValueChangeLogService
   private final TrackedEntityAttributeValueChangeLogStore attributeValueChangeLogStore;
 
   private final TrackedEntityAttributeService trackedEntityAttributeService;
-
-  private final CurrentUserService currentUserService;
 
   @Override
   public void addTrackedEntityAttributeValueChangLog(
@@ -71,7 +69,7 @@ public class DefaultTrackedEntityAttributeValueChangeLogService
 
     Set<String> allUserReadableTrackedEntityAttributes =
         trackedEntityAttributeService
-            .getAllUserReadableTrackedEntityAttributes(currentUserService.getCurrentUser())
+            .getAllUserReadableTrackedEntityAttributes(CurrentUserUtil.getCurrentUserDetails())
             .stream()
             .map(IdentifiableObject::getUid)
             .collect(Collectors.toSet());
@@ -79,7 +77,7 @@ public class DefaultTrackedEntityAttributeValueChangeLogService
     return attributeValueChangeLogs.stream()
         .filter(
             audit -> allUserReadableTrackedEntityAttributes.contains(audit.getAttribute().getUid()))
-        .collect(Collectors.toList());
+        .toList();
   }
 
   @Override
